syntax = "proto3";

option java_package = "com.mr3y.ludi.datastore.model";
option java_multiple_files = true;

message FollowedNewsDataSource {
  string name = 1;
  int32 drawableId = 2;
  string type = 3;
}